# AQI_predictor

./: .gitignore  README.md  api.py  api_requirements.txt  app.py  aqi-prediction.ipynb  aqi-prediction_multi.ipynb  earth.py  earth_7bands.py  eda.ipynb  main.ipynb  models.py  pipeline.py  preprocess_data.py  pyproject.toml  requirements.txt  run_pipeline.py  train.py  ui_requirements.txt
app/: __init__.py  streamlit_app.py
checkpoints/: st-resnet18_sv-resnet18_attn-sigmoid_gated_best_model.pth
config/: __init__.py  settings.py
notebooks/: aqi-prediction.ipynb  satellite_images.ipynb
src/: __init__.py  config.py  data_processing.py  losses.py  models.py  pipeline.py  prediction.py  satellite_utils.py  trainer.py  training.py  visualization.py
src/data_collection/: __init__.py  earth_engine_client.py  satellite_fetcher.py
src/eda/: __init__.py  exploratory_analysis.py  visualization.py
src/models/: __init__.py  aqi_predictor.py  attention.py  base_encoder.py
src/preprocessing/: __init__.py  data_cleaner.py
src/training/: __init__.py  dataset.py  loss_functions.py  trainer.py  visualization.py
src/utils/: helpers.py
utils/: fetch_7_bands.py  fetch_satellite.py  model.py  predict_aqi.py  resnet_aqi.py  resnet_base.py
