[project]
name = "aqi-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "pillow>=11.3.0",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.1",
    "uvicorn>=0.35.0",
    "wandb>=0.21.0",
]
